@@ -1,3 +1,9 @@
+2014-07-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/device-help.pl: Added the missing DEBUG config option
+	                        to the enhanced midrange MCUs.
+
+	* tools/cfg-import.pl: A minor update.
+
 2014-07-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/cfg-import.pl:
 	  New tool to prepare the gpcfg-table.c and gpcfg.h.
